ensure contrast for the PG and RPG header text

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/flow-designer/ui/canvas/_canvas.component-theme.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/flow-designer/ui/canvas/_canvas.component-theme.scss
@@ -401,10 +401,16 @@
 
         text.process-group-name,
         text.remote-process-group-name {
-            fill: $on-surface;
+            fill: utils.ensure-contrast(
+                $on-surface,
+                $banner-color,
+                if($is-dark, $nifi-theme-surface-palette-darker, $nifi-theme-surface-palette-lighter)
+            );
         }
 
-        text.version-control {
+        text.version-control,
+        text.not-transmitting,
+        text.transmitting {
             text-shadow: if($is-dark, 0 0 4px rgba(0, 0, 0, 1), 0 0 4px rgba(255, 255, 255, 1));
         }
 
